--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
         <ul>
           <li><a class="buttons github" href="https://github.com/alifarianda">GitHub Profile</a></li>
+	  <li><a class="buttons github" href="https://projecteuler.net/profile/alifarianda.png">Project Euler</a></li>
+	  <li><a class="buttons github" href="https://github.com/alifarianda">Wikipedia</a></li>
+	  <li><a class="buttons github" href="https://github.com/alifarianda">Stackoverflow</a></li>
         </ul>
 
       </header>
@@ -35,7 +38,7 @@
 <p><img src="http://himatipolnes.esy.es/gambar_artikel/57535-programming.png" alt="hima"></p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> by Alif Fandio Arianda</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
