--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>Hello, Alif from Indonesia here. Just testing as a new member of Github and now I try to take a part of Besut Kode Competition. I'm a student college in Polytechnic State of Samarinda, Information Technology Department.</p>
 
-<p><img src="https://github.com/alifarianda/alifarianda.github.io/blob/master/images/programming.png?raw=true" alt="hima"></p>
+<p><img src="http://himatipolnes.esy.es/gambar_artikel/57535-programming.png" alt="hima"></p>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> by Alif Fandio Arianda</small></p>
