--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h3>
 <a id="welcome-to-my-pages" class="anchor" href="#welcome-to-my-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to My Pages.</h3>
 
-<p>Hello, Alif from Indonesia here. Just testing as a new member of Github and now I try to take a part of Besut Kode Competition. I'm a student college in Polytechnic State of Samarinda, Information Technology Department.</p>
+<p>Hello, Alif from Indonesia here. Just testing as a new member of Github and now I try to take a part of Besut Kode Competition. I'm a student college in Polytechnic State of Samarinda, Information Technology Department. My Project Euler User: alifarianda</p>
 
 <p><img src="http://himatipolnes.esy.es/gambar_artikel/57535-programming.png" alt="hima"></p>
       </section>
