--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <ul>
           <li><a class="buttons github" href="https://github.com/alifarianda">GitHub Profile</a></li>
 	  <li><a class="buttons github" href="https://projecteuler.net/profile/alifarianda.png">Project Euler</a></li>
-	  <li><a class="buttons github" href="https://github.com/alifarianda">Wikipedia</a></li>
-	  <li><a class="buttons github" href="https://github.com/alifarianda">Stackoverflow</a></li>
+	  <li><a class="buttons github" href="https://id.wikipedia.org/wiki/Pengguna:Alifarianda">Wikipedia</a></li>
+	  <li><a class="buttons github" href="http://stackoverflow.com/users/7030472/alif-fandio-arianda">Stackoverflow</a></li>
         </ul>
 
       </header>
